# gemini-file-share-extn-by-claude

./: .gitignore  GEMINI.md  LICENSE  README.md  gemini-extension.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml
scripts/: install.sh
src/: __init__.py  auth.py  gcs_client.py  server.py  utils.py
